<resources>

    <!-- App Infos -->

    <string name="app_name">DiscoWall</string>
    <string name="app_about_disco_ag_url">disco.cs.uni-kl.de</string>
    <string name="app_about_description">
        DiscoWall is an interactive firewall which controls permissions for TCP- and UDP-connections per app.\n
        \nIn contrast to regular firewalls, DiscoWall uses netfilter\'s nfqueue-library to filter packages and thereby reacts to connections as they are being established.</string>
    <string name="app_about_build">build 2015-07-06</string>
    <string name="app_about_credits">Tewanima Löwe,\nDisco AG TU-Kaiserslautern, disco.cs.uni-kl.de</string>


    <!-- Preferences -->

    <string name="preference_id__nfqueue_bridge_port">nfqueue bridge port</string>
    <string name="preference_id__nfqueue_bridge_start_automatically">nfqueue bridge run local instance</string>
    <string name="preference_id__firewall_enabled">firewall enabled</string>
    <string name="preference_id__firewall_policy">firewall policy</string>
    <string name="preference_id__service_autostart">firewall service autostart</string>
    <string name="preference_id__watched_apps_uids">watched app uids</string>
    <string name="preference_id__interactive_rules_write_to_iptables">preference_id__interactive_rules_write_to_iptables</string>
    <string name="preference_id__interactive_rules_distinguish_temporary_rules_by_port">preference_id__interactive_rules_distinguish_temporary_rules_by_port</string>
    <string name="preference_id__handle_connection_dialog__create_rule_default_checked">handle_connection_dialog__create_rule_default_checked</string>
    <string name="preference_id__firewall_connection_decision_timeoutMS">preference_id__firewall_connection_decision_timeout</string>
    <string name="preference_id__firewall_connection_decision_default_action">preference_id__firewall_connection_decision</string>
    <string name="preference_id__firewall_connection_decision_expand_statusbar">preference_id__firewall_connection_decision_expand_statusbar</string>

    <string name="preference_summary__firewall_connection_decision_timeout_seconds">Timeout in seconds until the default-decision is being applied, when the user does not answer to a new connection while on interactive mode.</string>
    <string name="preference_summary__firewall_connection_decision_default_action">Default-decision to be taken when the user does not chose an action for a new connection: enabled = ACCEPT, disabled = BLOCK</string>
    <string name="preference_summary__firewall_connection_decision_expand_statusbar">Expand statusbar to show decision-notification when a connection needs ACCEPT/BLOCK decision. Only for interactive firewall mode.</string>
    <string name="preference_summary__interactive_rules_write_to_iptables">When interactive mode is enabled and a package is being received, the first matching rule is executed. Instead of handling this in userspace an iptables-rule can be created, to let the android-kernel handle the package in the same way DiscoWall would.</string>
    <string name="preference_summary__nfqueue_bridge_port">Port used by the nfqueue-communicator native binary to communicate with the firewall. As long as the port is not otherwise in use, anyone will do.</string>
    <string name="preference_summary__nfqueue_bridge_start_automatically">Disable for debugging-purposes. Firewall will first kill any running instance of nfqueue-bridge and then start a new one on the specified port.</string>
    <string name="preference_summary__service_autostart">Automatically start firewall-service with Android. Otherwise the service will be started when running the app.</string>
    <string name="preference_summary__handle_connection_dialog__create_rule_default_checked">When accepting/blocking a connect, create a new rule by default.</string>
    <string name="preference_summary__interactive_rules_distinguish_temporary_rules_by_port">When enabled the ports are relevant for distinguishing two connections between the same two hosts. When disabled, any decision taken for a connection between two hosts will be applied to any further connections between the same hosts (until firewall restart).</string>


    <!-- Generic Messages -->

    <string name="message_interfaces_at_least_one_required">At least one interface is required.</string>
    <string name="message_protocol_at_least_one_required">At least one protocol is required.</string>
    <string name="message_application_terminated">DiscoWall terminated</string>
    <string name="message_application_runs_in_background">DiscoWall running in background…</string>
    <string name="message_delete_all_rules_confirm">All rules will be deleted. Continue?</string>

    <!-- Actions -->

    <string name="action_rules_export">Export Rules</string>
    <string name="action_rules_import">Import Rules</string>
    <string name="action_rules_delete_all">Delete All Rules</string>
    <string name="action_rules_export_all">Export All Rules</string>
    <string name="action_rules_import_all">Import All Rules</string>

    <string name="action_main_menu_iptables_show_all">Show Iptable Rules (All)</string>
    <string name="action_main_menu_iptables_show_firewall_rules">Show Iptable Rules (firewall only)</string>
    <string name="action_main_menu_ifconfig">Show ifconfig</string>
    <string name="action_main_menu_settings">Settings</string>
    <string name="action_main_menu_about">About</string>
    <string name="action_main_menu_hide">Hide</string>
    <string name="action_main_menu_exit">Exit</string>
    <string name="action_main_menu_monitor_all_apps">Monitor All</string>
    <string name="action_main_menu_monitor_no_apps">Monitor None</string>
    <string name="action_main_menu_monitor_invert_monitored">Invert Selection</string>

    <string name="action_menu_watched_apps_list_app_start">Run Application</string>
    <string name="action_menu_watched_apps_list_app_show_rules">Show Rules</string>

    <string name="action_exit_application">Exit Firewall</string>
    <string name="action_create_rule">Create Rule</string>
    <string name="action_accept">Accept</string>
    <string name="action_block">Block</string>
    <string name="action_interactive">Interactive</string>
    <string name="action_apply_for_all_connections_of_this_app">Apply For New Connections</string>

    <string name="action_rule_add">Add Rule</string>
    <string name="action_rule_edit">Edit Rule</string>
    <string name="action_rule_delete">Delete Rule</string>
    <string name="action_rule_move_up">Move Rule Up</string>
    <string name="action_rule_move_down">Move Rule Down</string>

    <string name="question_delete_rule">Delete Rule?</string>
    <string name="question_delete_all_rules">Delete All Rules?</string>
    <string name="question_exit_application">Exit DiscoWall?</string>
    <string name="question_disable_firewall_and_exit_application">Disable and Exit DiscoWall?</string>

    <!-- GUI-specific texts -->

    <string name="decide_connection_dialog__title">Allow Connection?</string>
    <string name="decide_connection_dialog__message">Chose policy for new connection</string>

    <string name="settings_activity_title">DiscoWall Settings</string>

    <string name="main_activity_title">DiscoWall ─ interactive firewall</string>
    <string name="main_activity_label_firewallPolicy">Policy</string>
    <string name="main_activity_label_firewallEnabled">Firewall</string>
    <string name="main_activity__action__update_watched_apps">Updating Monitored Apps...</string>

    <string name="firewall_service_notification_title">DiscoWall Service</string>
    <string name="firewall_service_notification_message__firewall_paused">firewall paused</string>
    <string name="firewall_service_notification_message__firewall_enabled">firewall enabled, policy</string> <!-- string will be appended with FirewallPolicy -->
    <string name="firewall_service_notification_message__firewall_disabled">firewall disabled</string>

    <string name="title_activity_text_view">TextViewActivity</string>
    <string name="title_activity_edit_connection_rule_dialog">Edit Connection Rule</string>
    <string name="title_activity_show_app_rules">ShowAppRulesActivity</string>
    <string name="title_activity_decide_connection_dialog">DecideConnectionDialogActivity</string>
</resources>
