<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.uni_kl.informatik.disco.discowall.ShowAppRulesActivity">

    <!--

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    -->

    <item android:id="@+id/action_rules_move_rule_up" android:title="@string/action_rule_move_up"
        app:showAsAction="never" />
    <item android:id="@+id/action_rules_move_rule_down" android:title="@string/action_rule_move_down"
        app:showAsAction="never" />

    <item android:id="@+id/action_rules_create_rule" android:title="@string/action_rule_add"
        app:showAsAction="never" />
    <item android:id="@+id/action_rules_edit_rule" android:title="@string/action_rule_edit"
        app:showAsAction="never" />
    <item android:id="@+id/action_rules_delete_rule" android:title="@string/action_rule_delete"
        app:showAsAction="never" />

</menu>
