<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_iptables_show" android:title="@string/action_main_menu_iptables_show"
        android:orderInCategory="50" app:showAsAction="never" />

    <item android:id="@+id/action_main_menu_settings" android:title="@string/action_main_menu_settings"
        android:orderInCategory="90" app:showAsAction="never" />

    <item android:id="@+id/action_main_menu_about" android:title="@string/action_main_menu_about"
        android:orderInCategory="95" app:showAsAction="never" />

    <item android:id="@+id/action_main_menu_exit" android:title="@string/action_main_menu_exit"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
