<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >

    <!-- App-Icon with Name and Packagename -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="3dp"
            android:scaleType="centerCrop"
            android:contentDescription="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/textView_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_app_package"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <!-- ============================================================================== -->
        <!--    Connection -->
        <!-- ============================================================================== -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Connection"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!--    Client IP & Port -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_client"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="Client" />

            <EditText
                android:id="@+id/editText_client_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="ip / hostname"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/editText_client_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:inputType="number"
                android:hint="port"
                />
        </LinearLayout>

        <!--    Server IP & Port -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView_server"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="Server"
                />

            <EditText
                android:id="@+id/editText_server_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="ip / hostname"
                android:gravity="right"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":" />

            <EditText
                android:id="@+id/editText_server_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:inputType="number"
                android:hint="port"
                />
        </LinearLayout>

        <!-- ============================================================================== -->
        <!--    Seperator -->
        <!-- ============================================================================== -->

        <!--
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="#000000" >
        </LinearLayout>
        -->


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/textView_rule_protocol"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="Protocol"
                />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="1.5"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="TCP"
                    android:id="@+id/radioButton_protocol_tcp"
                    android:layout_weight="1"
                    />

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="UDP"
                    android:id="@+id/radioButton_protocol_udp"
                    android:layout_weight="1"
                    />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ff000000"
        android:layout_marginBottom="10dp"
        >
    </LinearLayout>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/checkBox_create_rule"
        android:text="@string/action_create_rule"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_accept"
            android:id="@+id/button_accept"
            android:layout_weight="0.5" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_block"
            android:id="@+id/button_block"
            android:layout_weight="0.5" />
    </LinearLayout>


</LinearLayout>
